src/styles/components/Countdown.module.css
.countdownContainer {
  display: flex;
  align-items: center;
  color: var(--title);
}

.countdownContainer > div {
  flex: 1;

  display: flex;
  align-items: center;
  justify-content: space-evenly;

  background: var(--white);
  box-shadow: 0 0 60px rgba(0, 0, 0, 0.05);
  border-radius: 5px;
  font-size: 8.5rem;
  text-align: center;
}

.countdownContainer > div span {
  flex: 1;
}

.countdownContainer > div span:first-child {
  border-right: 1px solid #f0f1f3;
}

.countdownContainer > div span:last-child {
  border-left: 1px solid #f0f1f3;
}

.countdownContainer > span {
  font-size: 6.25rem;
  margin: 0 0.5rem;
}

.countdownButton {
  width: 100%;
  height: 5rem;

  margin-top: 2rem;

  display: flex;
  align-items: center;
  justify-content: center;

  border: 0;
  border-radius: 5px;

  background: var(--blue);
  color: var(--white);

  font-size: 1.25rem;
  font-weight: 600;

  transition: background-color 0.2s;
}

.countdownButton:not([disabled]):hover {
  background: var(--blue-dark);
}

.countdownButtonActive {
  background: var(--white);
  color: var(--title);
}

.countdownButtonActive:not([disabled]):hover {
  background: var(--red);
  color: var(--white);
}

.countdownButton img {
  margin-left: 5px;
}

.countdownButton:disabled {
  background: var(--white);
  color: var(--text);
  cursor: not-allowed;
}

